Implemented non-square pixels for Screen type, using num_integer crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ authors = ["Sao Git <saogit@hotmail.com>"]
 
 [dependencies]
 num-rational = "0.2.1"
+num-integer = "0.1.39"
 num-traits = "0.2.6"
 fomat-macros = "0.2.1"
